--- a/mifosng-individual-lending-app/build.gradle
+++ b/mifosng-individual-lending-app/build.gradle
@@ -72,7 +72,7 @@ dependencies {
 	            [group: 'org.hibernate', name: 'hibernate-validator', version: hibernateValidatorVersion],	            
 	            [group: 'javax.ws.rs', name: 'jsr311-api', version: '1.1.1'],
 	            [group: 'com.sun.jersey', name: 'jersey-core', version: jerseyVersion],
-	            [group: 'com.sun.jersey', name: 'jersey-server', version: jerseyVersion],
+	            [group: 'com.sun.jersey', name: 'jersey-client', version: jerseyVersion],
 	            [group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.4'],
 	            [group: 'com.thoughtworks.xstream', name: 'xstream', version: '1.4.2'],
 	            [group: 'net.sf.kxml', name: 'kxml2-min', version: '2.3.0'],
