--- a/mifosng-individual-lending-app/build.gradle
+++ b/mifosng-individual-lending-app/build.gradle
@@ -44,6 +44,13 @@ repositories {
     }
 }
 
+configurations {
+    providedCompile
+	compile
+	runtime
+	all*.exclude group: 'commons-logging' // this is where we exclude
+}
+
 dependencies {
 
      def tomcatVersion = '7.0.26'
@@ -73,13 +80,12 @@ dependencies {
 	            [group: 'javax.validation', name: 'validation-api', version: '1.0.0.GA'],
 	            [group: 'org.hibernate', name: 'hibernate-validator', version: hibernateValidatorVersion],	            
 	            [group: 'javax.ws.rs', name: 'jsr311-api', version: '1.1.1'],
-	            [group: 'com.sun.jersey', name: 'jersey-core', version: jerseyVersion],
-	            [group: 'com.sun.jersey', name: 'jersey-client', version: jerseyVersion],
 	            [group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.4'],
 	            
 	            [group: 'joda-time', name: 'joda-time', version: '2.1'],
 	            [group: 'commons-lang', name: 'commons-lang', version: '2.4'],
 	            [group: 'commons-io', name: 'commons-io', version: '1.4'],
+	            [group: 'commons-httpclient', name: 'commons-httpclient', version: '3.1'],
 	            
 	            [group: 'org.slf4j', name: 'slf4j-api', version: '1.6.4'],
 	            [group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.6.4'],
