--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -9,9 +9,10 @@ buildscript {
     }
 
     dependencies {
-        classpath 'bmuschko:gradle-tomcat-plugin:0.9.1'
+        classpath 'bmuschko:gradle-tomcat-plugin:0.9.2'
     }
 }
+
 apply plugin: 'war'
 apply plugin: 'eclipse'
 apply plugin: 'tomcat'
@@ -60,7 +61,7 @@ configurations {
 }
 
 dependencies {
-     def tomcatVersion = '7.0.26'
+     def tomcatVersion = '7.0.27'
 	    tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
 	           "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}"
 	    tomcat("org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}") {
@@ -125,5 +126,7 @@ dependencies {
 [tomcatRun, tomcatRunWar, tomcatStop]*.with {
   configFile = file('src/test/resources/META-INF/context.xml')
   httpPort = 8080
+  httpsPort = 8443
   stopPort = 8081
+  enableSSL = true
 }
