--- a/mifosng-individual-lending-app/build.gradle
+++ b/mifosng-individual-lending-app/build.gradle
@@ -85,8 +85,8 @@ dependencies {
 	            [group: 'joda-time', name: 'joda-time', version: '2.1'],
 	            [group: 'commons-lang', name: 'commons-lang', version: '2.4'],
 	            [group: 'commons-io', name: 'commons-io', version: '1.4'],
-	            [group: 'commons-httpclient', name: 'commons-httpclient', version: '3.1'],
-	            
+	            [group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.1.3'],
+	             
 	            [group: 'org.slf4j', name: 'slf4j-api', version: '1.6.4'],
 	            [group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.6.4'],
 	            [group: 'ch.qos.logback', name: 'logback-core', version: '1.0.1'],
