handle resource not found possibilities. move version information to web.xml rather than each resource.

--- a/mifosng-provider/src/main/webapp/WEB-INF/web.xml
+++ b/mifosng-provider/src/main/webapp/WEB-INF/web.xml
@@ -75,7 +75,7 @@
  
 	<servlet-mapping>
 		<servlet-name>jersey-serlvet</servlet-name>
-		<url-pattern>/api/*</url-pattern>
+		<url-pattern>/api/v1/*</url-pattern>
 	</servlet-mapping>
 
 	<servlet>
