--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -1,5 +1,3 @@
-dependsOn(':mifosng-data')
-
 buildscript {
     repositories {
         add(new org.apache.ivy.plugins.resolver.URLResolver()) {
@@ -73,8 +71,7 @@ dependencies {
 				[group: 'javax.servlet', name: 'servlet-api', version: '2.5'],
 			)
 
-	compile(    project(':mifosng-data'), 
-	
+	compile(    
 				[group: 'javax.servlet', name: 'jstl', version: '1.2'],
 	            
 	   			[group: 'org.springframework', name: 'spring-core', version: springVersion],
