--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -112,6 +112,27 @@ dependencies {
 	            [group: 'ch.qos.logback', name: 'logback-classic', version: '1.0.0'],
 	            
 	            [group: 'mysql', name: 'mysql-connector-java', version: '5.1.18'],
+	            
+	            [name: 'bsf', version: '2.4.0'],
+ 	        	[name: 'bsh', version: '1.3.0'],
+ 	        	[name: 'itext', version: '2.1.7'],
+ 	        	[name: 'libbase', version: '1.2.2'],
+ 	        	[name: 'libdocbundle', version: '1.2.3'],
+ 	        	[name: 'libfonts', version: '1.2.3'],
+ 	        	[name: 'libformat', version: '1.2.4'],
+ 	        	[name: 'libformula', version: '1.2.3'],
+ 	        	[name: 'libloader', version: '1.2.3'],
+ 	        	[name: 'librepository', version: '1.2.3'],
+ 	        	[name: 'libserializer', version: '1.2.2'],
+ 	        	[name: 'libsparkline', version: '1.2.1'],
+ 	        	[name: 'libxml', version: '1.2.2'],
+ 	        	[name: 'pentaho-reporting-engine-classic-core', version: '3.8.3-GA'],
+ 	        	[name: 'pentaho-reporting-engine-classic-extensions', version: '3.8.3-GA'],
+ 	        	[name: 'pentaho-reporting-engine-wizard-core', version: '3.8.3-GA'],
+ 	        	[name: 'pentaho-reporting-engine-wizard-xul', version: '3.8.3-GA'],
+ 	        	[name: 'poi', version: '3.6'],
+ 	        	[name: 'poi-ooxml', version: '3.6'],
+ 	        	[name: 'poi-ooxml-schemas', version: '3.6'],
  	        )
  	        
  	 testCompile 'junit:junit:4.10', 
