--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -89,6 +89,8 @@ dependencies {
 	            [group: 'com.sun.jersey.contribs', name: 'jersey-spring', version: jerseyVersion],
 	            [group: 'com.sun.jersey.contribs', name: 'jersey-multipart', version: jerseyVersion],
 	            
+	            [group: 'com.google.code.gson', name: 'gson', version: '2.2.2'],
+	            
 	            [group: 'org.springframework.data', name: 'spring-data-jpa', version: springDataJpaVersion],
 	            
 	            [group: 'joda-time', name: 'joda-time', version: '2.1'],
