--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'bmuschko:gradle-tomcat-plugin:0.9.2'
+        classpath 'bmuschko:gradle-tomcat-plugin:0.9.3'
     }
 }
 
@@ -15,15 +15,12 @@ apply plugin: 'war'
 apply plugin: 'eclipse'
 apply plugin: 'tomcat'
 
-sourceCompatibility = JavaVersion.VERSION_1_6
-targetCompatibility = JavaVersion.VERSION_1_6
-
-springVersion = '3.1.1.RELEASE'
-springSecurityVersion = '3.1.0.RELEASE'
-hibernateValidatorVersion = '4.3.0.Final'
-hibernateCoreVersion = '4.1.3.Final'
-jerseyVersion = '1.13'
-springDataJpaVersion = '1.0.3.RELEASE'
+project.ext.springVersion = '3.1.1.RELEASE'
+project.ext.springSecurityVersion = '3.1.0.RELEASE'
+project.ext.hibernateValidatorVersion = '4.3.0.Final'
+project.ext.hibernateCoreVersion = '4.1.3.Final'
+project.ext.jerseyVersion = '1.13'
+project.ext.springDataJpaVersion = '1.0.3.RELEASE'
 
 repositories {
     mavenCentral()
@@ -56,7 +53,7 @@ configurations {
 }
 
 dependencies {
-     def tomcatVersion = '7.0.29'
+        def tomcatVersion = '7.0.29'
 	    tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
 	           "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}"
 	    tomcat("org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}") {
