remove ususage of jackson for json serialization or deserialization. Ensure that additional data set info is always passed back in array format.

--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -49,7 +49,8 @@ configurations {
     providedCompile
 	compile
 	runtime
-	all*.exclude group: 'commons-logging' // this is where we exclude
+	all*.exclude group: 'commons-logging'
+	all*.exclude group: 'org.codehaus.jackson'
 }
 
 dependencies {
