--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -14,6 +14,7 @@ buildscript {
 apply plugin: 'war'
 apply plugin: 'eclipse'
 apply plugin: 'tomcat'
+apply plugin: 'project-report'
 
 project.ext.springVersion = '3.1.1.RELEASE'
 project.ext.springSecurityVersion = '3.1.0.RELEASE'
@@ -50,6 +51,7 @@ configurations {
 	compile
 	runtime
 	all*.exclude group: 'commons-logging'
+	all*.exclude group: 'org.codehaus.jackson'
 	all*.exclude group: 'org.codehaus.jackson'
 }
 
