add context.xml in test resources to git ignore, meaning if people change this file it wont appear in commit log or be checked in.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 bin
 build
 repos
-mifosng-provider\src\test\resources\META-INF\context.xml
+mifosng-provider/src/test/**/**/context.xml
 .classpath
 .project
 .settings
