--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -100,6 +100,7 @@ dependencies {
 	            [group: 'com.sun.jersey.contribs', name: 'jersey-multipart', version: jerseyVersion],
 	            
 	            [group: 'com.google.code.gson', name: 'gson', version: '2.2.2'],
+	            [group: 'com.google.guava', name: 'guava', version: '14.0-rc2'],
 	            
 	            [group: 'org.springframework.data', name: 'spring-data-jpa', version: springDataJpaVersion],
 	            
