--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -1,5 +1,3 @@
-apply plugin: 'rebel'
-
 buildscript {
   repositories {
      mavenLocal()
@@ -26,6 +24,18 @@ buildscript {
     }
 }
 
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.5.0'
+    }
+}
+
+apply plugin: 'rebel'
+apply plugin: 'license'
 apply plugin: 'war'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
@@ -146,6 +156,11 @@ dependencies {
                  'org.mockito:mockito-all:1.9.0',
                  'org.hamcrest:hamcrest-all:1.1'
  	 
+}
+
+license {
+    header rootProject.file('../LICENSE.MD')
+    strictCheck true
 }
 
 [tomcatRun, tomcatRunWar, tomcatStop]*.with {
