--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -1,3 +1,12 @@
+description = '''\
+To run this build script we must first 
+set an environment variable 
+ORG_GRADLE_PROJECT_property5=environment property
+
+Run as: 
+gradle -Property4="argument property" -Dorg.gradle.project.property6="system property"
+'''
+
 buildscript {
   repositories {
      mavenLocal()
@@ -5,23 +14,20 @@ buildscript {
      mavenRepo(name: 'zt-public-snapshots',
                url: 'http://repos.zeroturnaround.com/nexus/content/groups/zt-public/')
   }
-
+  
   dependencies {
      classpath group: 'org.zeroturnaround', name: 'gradle-jrebel-plugin', version: '1.0.2-SNAPSHOT'
   }
 }
 
 buildscript {
-    repositories {
-        add(new org.apache.ivy.plugins.resolver.URLResolver()) {
-            name = 'GitHub'
-            addArtifactPattern 'http://cloud.github.com/downloads/[organisation]/[module]/[module]-[revision].[ext]'
-        }
+ 	repositories {
+        mavenCentral()
     }
-
+    
     dependencies {
-        classpath 'bmuschko:gradle-tomcat-plugin:0.9.5'
-    }
+        classpath 'org.gradle.api.plugins:gradle-tomcat-plugin:0.9.7'
+  	}
 }
 
 buildscript {
@@ -50,9 +56,11 @@ targetCompatibility = JavaVersion.VERSION_1_6
 project.ext.springVersion = '3.2.1.RELEASE'
 project.ext.springSecurityVersion = '3.1.3.RELEASE'
 project.ext.hibernateValidatorVersion = '4.3.1.Final'
-project.ext.hibernateCoreVersion = '4.1.8.Final'
-project.ext.jerseyVersion = '1.16'
-project.ext.springDataJpaVersion = '1.1.2.RELEASE'
+project.ext.hibernateCoreVersion = '4.1.9.Final'
+project.ext.jerseyVersion = '1.17'
+project.ext.springDataJpaVersion = '1.2.1.RELEASE'
+
+group = 'org.mifosplatform'
 
 repositories {
     mavenCentral()
@@ -76,7 +84,7 @@ configurations {
 }
 
 dependencies {
-        def tomcatVersion = '7.0.34'
+        def tomcatVersion = '7.0.37'
 	    tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
 	           "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}"
 	    tomcat("org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}") {
@@ -126,27 +134,27 @@ dependencies {
 	            [group: 'ch.qos.logback', name: 'logback-classic', version: '1.0.9'],
 	            
 	            [group: 'mysql', name: 'mysql-connector-java', version: '5.1.22'],
-	            [group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '7.0.34'],
+	            [group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '7.0.37'],
 	            
-	            [group: 'pentaho-reporting-engine', name: 'pentaho-reporting-engine-classic-core', version: '3.8.3-GA'],
-	            [group: 'pentaho-reporting-engine', name: 'pentaho-reporting-engine-classic-extensions', version: '3.8.3-GA'],
-				[group: 'pentaho-reporting-engine', name: 'pentaho-reporting-engine-wizard-core', version: '3.8.3-GA'],
-	            [group: 'pentaho-report-designer', name: 'pentaho-reporting-engine-wizard-xul', version: '3.8.3-GA'],
+	            [group: 'pentaho-reporting-engine', name: 'pentaho-reporting-engine-classic-core', version: '3.9.1.1'],
+	            [group: 'pentaho-reporting-engine', name: 'pentaho-reporting-engine-classic-extensions', version: '3.9.1-GA'],
+				[group: 'pentaho-reporting-engine', name: 'pentaho-reporting-engine-wizard-core', version: '3.9.1-GA'],
+	            [group: 'pentaho-report-designer', name: 'pentaho-reporting-engine-wizard-xul', version: '3.9.1-GA'],
 	            
-	            [group: 'pentaho-library', name: 'libbase', version: '1.2.2'],
- 	        	[group: 'pentaho-library',name: 'libdocbundle', version: '1.2.3'],
- 	        	[group: 'pentaho-library',name: 'libfonts', version: '1.2.3'],
- 	        	[group: 'pentaho-library',name: 'libformat', version: '1.2.4'],
- 	        	[group: 'pentaho-library',name: 'libformula', version: '1.2.3'],
- 	        	[group: 'pentaho-library',name: 'libloader', version: '1.2.3'],
- 	        	[group: 'pentaho-library',name: 'librepository', version: '1.2.3'],
- 	        	[group: 'pentaho-library',name: 'libserializer', version: '1.2.2'],
- 	        	[group: 'pentaho-library',name: 'libsparkline', version: '1.2.1'],
- 	        	[group: 'pentaho-library',name: 'libxml', version: '1.2.2'],
+	            [group: 'pentaho-library', name: 'libbase', version: '1.2.8'],
+ 	        	[group: 'pentaho-library',name: 'libdocbundle', version: '1.2.8'],
+ 	        	[group: 'pentaho-library',name: 'libfonts', version: '1.2.8'],
+ 	        	[group: 'pentaho-library',name: 'libformat', version: '1.2.8'],
+ 	        	[group: 'pentaho-library',name: 'libformula', version: '1.2.8'],
+ 	        	[group: 'pentaho-library',name: 'libloader', version: '1.2.8'],
+ 	        	[group: 'pentaho-library',name: 'librepository', version: '1.2.8'],
+ 	        	[group: 'pentaho-library',name: 'libserializer', version: '1.2.8'],
+ 	        	[group: 'pentaho-library',name: 'libsparkline', version: '1.2.8'],
+ 	        	[group: 'pentaho-library',name: 'libxml', version: '1.2.8'],
  	        	
- 	        	[group: 'org.apache.poi',name: 'poi', version: '3.6'],
- 	        	[group: 'org.apache.poi',name: 'poi-ooxml', version: '3.6'],
- 	        	[group: 'org.apache.poi',name: 'poi-ooxml-schemas', version: '3.6'],
+ 	        	[group: 'org.apache.poi',name: 'poi', version: '3.9'],
+ 	        	[group: 'org.apache.poi',name: 'poi-ooxml', version: '3.9'],
+ 	        	[group: 'org.apache.poi',name: 'poi-ooxml-schemas', version: '3.9'],
 	            
 	            [group: 'com.lowagie', name: 'itext', version: '2.1.7'],
 	            [group: 'com.lowagie', name: 'itext-rtf', version: '2.1.7'],
@@ -158,15 +166,48 @@ dependencies {
  	 
 }
 
+task dist(type:Zip){
+	baseName= 'mifosplatform'
+	version = qualifyVersionIfNecessary(releaseVersion)
+    from jar.outputs.files
+    from war.outputs.files
+}
+
 license {
     header rootProject.file('../LICENSE.MD')
     strictCheck true
 }
 
-[tomcatRun, tomcatRunWar, tomcatStop]*.with {
-  configFile = file('src/test/resources/META-INF/context.xml')
-  httpPort = 8080
-  httpsPort = 8443
-  stopPort = 8081
-  enableSSL = true
+tomcatRun {
+    httpPort = 8080
+    httpsPort = 8443
+    stopPort = 8081
+    enableSSL = true
+    configFile = file('src/test/resources/META-INF/context.xml')
+}
+
+tomcatRunWar {
+    httpPort = 8080
+    httpsPort = 8443
+    stopPort = 8081
+    enableSSL = true
+    configFile = file('src/test/resources/META-INF/context.xml')
+}
+
+/*
+* Support publication of artifacts versioned by topic branch.
+* CI builds supply `-P BRANCH_NAME=<TOPIC>` to gradle at build time.
+* If <TOPIC> starts with 'MIFOSX-', change version
+* from BUILD-SNAPSHOT => <TOPIC>-SNAPSHOT
+* e.g. 1.1.0.BUILD-SNAPSHOT => 1.0.0.MIFOSX-1234-SNAPSHOT
+*/
+def qualifyVersionIfNecessary(version) {
+	
+	if (rootProject.hasProperty("BRANCH_NAME")) {
+		def qualifier = rootProject.getProperty("BRANCH_NAME")
+		if (qualifier.startsWith("MIFOSX-")) {
+			return version.replace('BUILD', qualifier)
+		}
+	}
+	return version
 }
