--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -180,10 +180,13 @@ task dist(type:Zip){
 
 task deployPentahoReports() {
 	def pentahoReportDir = System.properties['user.home'] + System.properties['file.separator'] + '.mifosx' + System.properties['file.separator'] + 'pentahoReports'
-	println ":deployPentahoReports - moving pentaho reports under: " + pentahoReportDir
 	copy {
         from "src/main/pentahoReports"
         into pentahoReportDir
+    }
+    
+    doLast {
+        println ':deployPentahoReports - moving pentaho reports under: ' + pentahoReportDir
     }
 }
 
@@ -211,6 +214,8 @@ tomcatRunWar {
     stopPort = 8081
     stopKey=   'stopKey'
     enableSSL = true
+    keystoreFile = file('../keystore.jks')
+    keystorePass = 'openmf'
     configFile = file('src/test/resources/META-INF/context.xml')
 }
 
