minor additions to Flyway support...ability to optionally upgrade databases on application startup

--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -191,6 +191,9 @@ task deployPentahoReports() {
 
 war {
     it.dependsOn deployPentahoReports
+    from ('../mifosng-db/migrations') {
+    	into "WEB-INF/classes/sql"
+    }
 }
 
 license {
