update to release 0.11.0.beta

--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -177,6 +177,11 @@ task dist(type:Zip){
         include '*'
         into('pentahoReports')
     }
+    from('../api-docs/') {
+        fileMode = 0755
+        include '*'
+        into('api-docs')
+    }
     from jar.outputs.files
     from war.outputs.files
 }
